icon description added

--- a/index.html
+++ b/index.html
@@ -70,17 +70,28 @@
         <div class="icon-container">
           <div class="icon">
             <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/services_icons/design_icon.png" alt="icon1">
-            <div class="description">description 1</div>
+            <h4>DESIGN</h4>
+            <div class="description">Our design practice offers a full range of services including brand strategy,
+              interaction and visual design and user experience testing.
+              Throughout your project, our designers create and implement visual design and workflows, solicit user
+              feedback and work with you to make sure what gets build is what is needed.</div>
             </div>
             <div class="icon">
               <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/services_icons/dev_icon.png" alt="icon2">
-              <div class="description">description 2</div>
+              <h4>DEVELOPMENT</h4>
+              <div class="description">All the engineers are fluent in the latest enterprise, mobile and web development
+                technologies.
+                They collaborate with your team to write, and improve code on a daily basis, using proven practices such
+                test-driven development and pair programming.</div>
             </div>
             <div class="icon">
               <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/services_icons/product_icon.png" alt="icon3">
-              <div class="description">description 3</div>
+              <h4>PRODUCT MANAGEMENT</h4>
+              <div class="description">Planning and development is iterative. Because we are constantly coding and testing,
+              the products we build are always ready to go live.
+              This iterative process allows for changes as business requirements evolve. </div>
             </div>                         
-                       
+           </div>       
           </div>
       </section>
     </div>
