code formated more

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="icon">
           <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/services_icons/design_icon.png"
             alt="icon1">
-          <h4>DESIGN</h4>
+          <h5>DESIGN</h5>
           <div class="description">Our design practice offers a full range of services including brand strategy,
             interaction and visual design and user experience testing.
             Throughout your project, our designers create and implement visual design and workflows, solicit user
@@ -81,7 +81,7 @@
         <div class="icon">
           <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/services_icons/dev_icon.png"
             alt="icon2">
-          <h4>DEVELOPMENT</h4>
+          <h5>DEVELOPMENT</h5>
           <div class="description">All the engineers are fluent in the latest enterprise, mobile and web development
             technologies.
             They collaborate with your team to write, and improve code on a daily basis, using proven practices such
@@ -90,7 +90,7 @@
         <div class="icon">
           <img src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/services_icons/product_icon.png"
             alt="icon3">
-          <h4>PRODUCT MANAGEMENT</h4>
+          <h5>PRODUCT MANAGEMENT</h5>
           <div class="description">Planning and development is iterative. Because we are constantly coding and testing,
             the products we build are always ready to go live.
             This iterative process allows for changes as business requirements evolve. </div>
@@ -201,7 +201,7 @@
     <section id="Contacts us" class="relative_parent py-5">
       <img src="./IMG/background3.jpg" class="my-image" alt="image" width="1000" height="500">
       <div class="contacts">
-        <h2>CONTACT US</h2>
+        <h3>CONTACT US</h3>
 
         <form id="contact-form" method="post">
           <div class="row">
@@ -222,7 +222,7 @@
     </section>
   </div>
 
-  <div id="div" class="container-xl ">
+  <div id="div" class="container-xl " class="py-5">
     <section id="social icon" >
       <div class="row icons">
 
@@ -296,10 +296,10 @@
     </section>
   </div>
 
-  <div id="div" class="container-xl">
+  <div id="div" class="container-xl" class="py-3">
     <section id="end logo" class="end">
-      <h5>DELANI STUDIO</h5>
-      <h6>2019</h6>
+      <h6>DELANI STUDIO</h6>
+      <h7>2019</h7>
 
   </div>
   </section>
