--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         src="https://github.com/jonnygovish/IP3/blob/master/assets/backgrounds/h_img.jpg?raw=true" width="1000"
         height="500" />
       <img class="logo" src="https://raw.githubusercontent.com/jonnygovish/IP3/master/assets/logo/logo.png" />
+      <img class="mouse" src="./IMG/mouse_click.png" />
       <div class="hero-text-1">
         <h1 style="font-size:30px">WELCOME</h1>
         <h2>TO DELANI STUDIO</h2>
@@ -40,14 +41,15 @@
   <div class="container-xl">
     <section id="About us" class="py-5">
       <h3>ABOUT US</h3>
-      <p class="text-center">When you work with us, you are part of a team of committed collaborators. All
+      <div class="about">
+       <p class="text-center">When you work with us, you are part of a team of committed collaborators. All
         aspect of
-        our software development process are integrated, interactive and agile.
-        Our approach unifies design, development and product management to create exceptional products.
-        We start each project by understanding your business goals, the users's needs and product requirements.
-        Then we help translate them into effective and elegant solutions.
-
-      </p>
+        our software development process are integrated, interactive and agile.</p>
+        <P class="text-center">Our approach unifies design, development and product management to create exceptional products.</P>
+        <p class="text-center">We start each project by understanding your business goals, the users's needs and product requirements.</p>
+        <p class="text-center">Then we help translate them into effective and elegant solutions.</p>
+        </p>
+      </div>
     </section>
   </div>
 
@@ -55,11 +57,11 @@
     <section id="About us" class="py-5">
       <img src="./IMG/background 2.jpg" alt="image" width="1000" height="300">
       <div class="services">
-        <h2>Services</h2>
-        <p>Before we sign a contract or write a line of code our team will spend the necessary time
-          needed
-          to understand your product viision. The outcome of ths scopng session is propasal or high level
-          statement of work. Based on your requirements, we can provde a complete offering or just the peces you need.
+        <h2>SERVICES</h2>
+        <p class="text">Before we sign a contract or write a line of code our team will spend the necessary time
+          needed to understand your product vision.</p> 
+          <p>The outcome of ths scopng session is propasal or high level statement of work.</p> 
+          <p>Based on your requirements, we can provde a complete offering or just the peces you need.</p>
         </p>
       </div>
     </section>
@@ -201,7 +203,7 @@
     <section id="Contacts us" class="relative_parent py-5">
       <img src="./IMG/background3.jpg" class="my-image" alt="image" width="1000" height="500">
       <div class="contacts">
-        <h3>CONTACT US</h3>
+        <h4>CONTACT US</h4>
 
         <form id="contact-form" method="post">
           <div class="row">
