README file added

--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
     <section id="About us" class="py-5">
       <h3>ABOUT US</h3>
       <div class="about">
-       <p class="text-center">When you work with us, you are part of a team of committed collaborators. All
-        aspect of
-        our software development process are integrated, interactive and agile.</p>
-        <P class="text-center">Our approach unifies design, development and product management to create exceptional products.</P>
-        <p class="text-center">We start each project by understanding your business goals, the users's needs and product requirements.</p>
+        <p class="text-center">When you work with us, you are part of a team of committed collaborators. All
+          aspect of
+          our software development process are integrated, interactive and agile.</p>
+        <P class="text-center">Our approach unifies design, development and product management to create exceptional
+          products.</P>
+        <p class="text-center">We start each project by understanding your business goals, the users's needs and product
+          requirements.</p>
         <p class="text-center">Then we help translate them into effective and elegant solutions.</p>
         </p>
       </div>
@@ -59,9 +61,9 @@
       <div class="services">
         <h2>SERVICES</h2>
         <p class="text">Before we sign a contract or write a line of code our team will spend the necessary time
-          needed to understand your product vision.</p> 
-          <p>The outcome of ths scopng session is propasal or high level statement of work.</p> 
-          <p>Based on your requirements, we can provde a complete offering or just the peces you need.</p>
+          needed to understand your product vision.</p>
+        <p>The outcome of ths scopng session is propasal or high level statement of work.</p>
+        <p>Based on your requirements, we can provde a complete offering or just the peces you need.</p>
         </p>
       </div>
     </section>
@@ -225,7 +227,7 @@
   </div>
 
   <div id="div" class="container-xl " class="py-5">
-    <section id="social icon" >
+    <section id="social icon">
       <div class="row icons">
 
 
