--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="CSS/styles.css" rel="stylesheet">
 
-
   <title>Delani Studio</title>
   <style>
     body,
@@ -31,7 +30,6 @@
         <h1 style="font-size:30px">WELCOME</h1>
         <h2>TO DELANI STUDIO</h2>
         <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
-
       </div>
   </div>
   </div>
@@ -107,7 +105,6 @@
   <div id="div" class="container-xl">
     <section id="Portfolio" class="py-5">
       <h3>PORTFOLIO</h3>
-
       <div class="row">
         <div class="col-md-3">
           <div class="project">
@@ -116,7 +113,6 @@
                 alt="Project Image" style="width:100%">
               <div class="overlay">
                 <div class="project-name">Black background</div>
-
               </div>
             </div>
           </div>
@@ -210,13 +206,13 @@
         <form id="contact-form" method="post">
           <div class="row">
             <div class="col-md-6 mb-3" style="width: 100%;">
-              <input type="text" id="name" class="form-control" placeholder="Name...">
+              <input type="text" id="name" class="form-control" placeholder="Name..." style="color: white;">
             </div>
             <div class="col-md-6 mb-3">
-              <input type="text" id="email" class="form-control" placeholder="Email..">
+              <input type="text" id="email" class="form-control" placeholder="Email.." style="color: white;">
             </div>
             <div class="col">
-              <input type="text" textarea id="message" class="form-control" placeholder="Your message here..">
+              <input type="text" textarea id="message" class="form-control" placeholder="Your message here.." style="color:white ;">
             </div>
           </div>
 
@@ -229,73 +225,42 @@
   <div id="div" class="container-xl " class="py-5">
     <section id="social icon">
       <div class="row icons">
-
-
         <div class="thumbnail">
           <img src="https://github.com/jonnygovish/IP3/blob/master/assets/social_icons/twitter.png?raw=true"
             alt="social_icons" style="width:100%">
-
-
         </div>
-
         <div class="thumbnail">
           <img src="https://github.com/jonnygovish/IP3/blob/master/assets/social_icons/dribble.png?raw=true"
             alt="social_icons" style="width:100%">
-
-
         </div>
-
         <div class="thumbnail">
           <img src="https://github.com/jonnygovish/IP3/blob/master/assets/social_icons/facebook.png?raw=true"
             alt="social_icons" style="width:100%">
-
-
         </div>
-
         <div class="thumbnail">
           <img src="https://github.com/jonnygovish/IP3/blob/master/assets/social_icons/g_plus.png?raw=true"
             alt="social_icons" style="width:100%">
-
-
         </div>
-
         <div class="thumbnail">
           <img src="https://github.com/jonnygovish/IP3/blob/master/assets/social_icons/skype.png?raw=true"
             alt="social_icons" style="width:100%">
-
-
         </div>
-
         <div class="thumbnail">
           <img src="https://github.com/jonnygovish/IP3/blob/master/assets/social_icons/stumble_upon.png?raw=true"
             alt="social_icons" style="width:100%">
-
-
         </div>
-
         <div class="thumbnail">
           <img src="https://github.com/jonnygovish/IP3/blob/master/assets/social_icons/behance.png?raw=true"
             alt="social_icons" style="width:100%">
-
-
         </div>
-
         <div class="thumbnail">
           <img src="https://github.com/jonnygovish/IP3/blob/master/assets/social_icons/pinterest.png?raw=true"
             alt="social_icons" style="width:100%">
-
-
         </div>
-
         <div class="thumbnail">
           <img src="https://github.com/jonnygovish/IP3/blob/master/assets/social_icons/flickr.png?raw=true"
             alt="social_icons" style="width:100%">
-
-
         </div>
-
-
-
       </div>
     </section>
   </div>
@@ -304,10 +269,8 @@
     <section id="end logo" class="end">
       <h6>DELANI STUDIO</h6>
       <h7>2019</h7>
-
   </div>
   </section>
-
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
